# figma-slides-mcp

./: .mcp.json  CLAUDE.md  README.md  elucidate.md  insitro.md  modulari-t.md  modularity-bio.md  package-lock.json  package.json  slides.md
.github/workflows/: build-slides.yml  release.yml
decks/: _example.js
mcp/: build.mjs
mcp/figma-plugin/: code.ts  tsconfig.json
scripts/: check-layout.mjs  dev.sh  generate-index.mjs  generate-index.sh  mermaid-config.json  pptx-dev.js  pptx-helpers.js  preprocess-mermaid.sh
skills/pptx/: SKILL.md  editing.md  pptxgenjs.md  pyproject.toml
skills/pptx/scripts/: thumbnail.py
skills/pptx/scripts/office/: __init__.py  pack.py  unpack.py
slides/: AZ-postman.md  AZ-variantformer.md  az-postman-notes.txt  elucidate.md  insitro.md  modulari-t.md
themes/: strand.css
