[project]
name = "strand-pptx-skill"
version = "0.1.0"
description = "PPTX creation and editing skill for Strand AI presentations"
requires-python = ">=3.11"
dependencies = [
    "markitdown[pptx]>=0.0.1",
    "defusedxml>=0.7.1",
    "lxml>=5.0.0",
    "Pillow>=10.0.0",
]

[tool.uv]
dev-dependencies = []
